[gd_scene load_steps=5 format=3 uid="uid://qdg4h5ru2jm7"]

[ext_resource type="Script" uid="uid://bgyrd7pspm1cs" path="res://classes/units/use_item_window/use_item_window.gd" id="1_v37kr"]
[ext_resource type="Texture2D" uid="uid://jwrp3m3e3k4p" path="res://assets/ui/UI assets (1x).png" id="2_1phrl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_agdnx"]
atlas = ExtResource("2_1phrl")
region = Rect2(197, 6, 37, 36)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eju2t"]
texture = SubResource("AtlasTexture_agdnx")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[node name="UseItemWindow" type="Window"]
canvas_item_default_texture_filter = 0
initial_position = 1
size = Vector2i(280, 180)
transient = true
exclusive = true
borderless = true
always_on_top = true
script = ExtResource("1_v37kr")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_eju2t")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 25

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Confirm" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Confirm"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Cancel
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Cancel" to="." method="_on_cancel_pressed"]
